<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_new_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_new_task"
            app:navigationIcon="@drawable/ic_navigate_before"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/etv_task_title"
            app:layout_constraintTop_toBottomOf="@+id/mt_new_toolbar"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/etv_task_description"
            app:layout_constraintTop_toBottomOf="@+id/til_task_title"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|text"
                android:minLines="4"
                android:maxLines="4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/etv_task_date"
            app:startIconDrawable="@drawable/ic_calendar"
            android:layout_marginRight="2dp"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toBottomOf="@+id/til_task_description"
            app:layout_constraintEnd_toStartOf="@+id/til_task_hour">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:textSize="12sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_task_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/etv_task_hour"
            app:startIconDrawable="@drawable/ic_timer"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toEndOf="@+id/til_task_date"
            app:layout_constraintTop_toTopOf="@+id/til_task_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:textSize="12sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintTop_toBottomOf="@id/til_task_date">

            <RadioButton
                android:id="@+id/rb_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:textColor="#DAA520"
                android:backgroundTint="#DAA520"
                android:text="@string/task_status_pending"/>

            <RadioButton
                android:id="@+id/rb_concluded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#228B22"
                android:backgroundTint="#228B22"
                android:text="@string/task_status_ok"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:backgroundTint="@color/gray"
            android:text="Cancelar"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toStartOf="@id/btn_new_task"
            app:layout_constraintTop_toBottomOf="@+id/rg_status"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/title_new_task"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel_task"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel_task"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

